# medibot

./: .gitignore  README.md  pyproject.toml
backend/: .gitignore
backend/app/api/: main.py
backend/app/core/: config.py  security.py
backend/app/ingestion/: chunker.py
backend/app/rag/: doc_rag.py  llm.py  pipeline.py  sql_rag.py
backend/app/retrieval/: embeddings.py  reranker.py  retriever.py  vector_store.py
backend/scripts/: ingest.py  inspect_chunks.py  inspect_db.py  test_rerank.py  test_retrieval.py  test_sql_rag.py
frontend/app/: globals.css  page.tsx
frontend/lib/: api.ts
