[project]
name = "medibot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.102.2",
    "fastapi>=0.137.1",
    "fastembed>=0.8.0",
    "groq>=1.4.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "uvicorn[standard]>=0.49.0",
]
